# yorrick

./: .gitignore  LICENSE  README.md  generate_prompts.py  pyproject.toml  test.py  yorrick.py
